# SmallNeuro

Emotions/: pyproject.toml
Emotions/src/emotions/: main.ipynb
LinearRegression/: main.ipynb
LogisticRegression/: main.ipynb
RecommendationSystem/: content-based.ipynb  main.ipynb
