[project]
name = "emotions"
version = "0.1.0"
description = ""
authors = [
    {name = "Esternit",email = "92298236+Esternit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]

[tool.poetry]
packages = [{include = "emotions", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
